# compass-photo-puller

./: .gitignore  COMPASSPHOTO_README.md  Dockerfile  README.md  compassphoto.py  compose.yml  pyproject.toml  requirements.txt  run.py
compass_photo/: __init__.py  core.py
